kubernetes/apps/minecraft/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: minecraft
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft
  namespace: minecraft
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to: # minecraft-auth
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuma
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: kuma
              app.kubernetes.io/instance: kuma-kuma
              app.kubernetes.io/name: kuma-kuma
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: minecraft-minecraft-router
              app.kubernetes.io/name: mc-router
      ports:
        - port: 25565
          protocol: TCP
        - port: 25565
          protocol: UDP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mc-router
  namespace: minecraft
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: minecraft-minecraft-router
      app.kubernetes.io/name: mc-router
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: minecraft
      ports:
        - port: 25565
          protocol: TCP
        - port: 25565
          protocol: UDP
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuma
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: kuma
              app.kubernetes.io/instance: kuma-kuma
              app.kubernetes.io/name: kuma-kuma
      ports:
        - port: 25565
          protocol: TCP
        - port: 25565
          protocol: UDP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9100
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mc-router
  namespace: minecraft
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minecraft-minecraft-router
      app.kubernetes.io/name: mc-router
  egress:
    - toEntities:
      - kube-apiserver
